welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: Missing closing brace `}' assumed here
var pas:Int =0;
^